--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "normalize.css": "^8.0.1",
+    "page": "^1.11.6",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
@@ -18,7 +20,9 @@
     "@vue/compiler-sfc": "^3.0.0-0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2"
   },
   "eslintConfig": {
     "root": true,
