--- a/package.json
+++ b/package.json
@@ -10,20 +10,30 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "nanoid": "^3.1.12",
     "normalize.css": "^8.0.1",
     "page": "^1.11.6",
-    "vue": "^3.0.0-0"
+    "vue": "^3.0.0-0",
+    "vue-class-component": "^8.0.0-0",
+    "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "^4.5.4",
     "@vue/compiler-sfc": "^3.0.0-0",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.2"
+    "sass-loader": "^10.0.2",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1"
   },
   "eslintConfig": {
     "root": true,
@@ -31,13 +41,13 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/recommended",
+      "@vue/typescript",
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+      "parser": "@typescript-eslint/parser"
+    }
   },
   "browserslist": [
     "> 1%",
