Import Export functionality on items

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     ],
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
+    },
+    "rules": {
+      "vue/no-v-model-argument": "off"
     }
   },
   "browserslist": [
